<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layPlayer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_almost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <dev.chromeos.videocompositionsample.presentation.opengl.CompositionGLSurfaceView
            android:id="@+id/compositionGLSurfaceView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/ivRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin_24dp"
            android:src="@drawable/circle_red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/compositionGLSurfaceView"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            />

        <LinearLayout
            android:id="@+id/laySummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/main_margin_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tvEncoderCoderLabel"
                    style="@style/AppSummaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings__decoder_encoder_codec_label"
                    />

                <TextView
                    android:id="@+id/tvEncoderCodecValue"
                    style="@style/AppSummaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_margin_2dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tvDecoderFallbackLabel"
                    style="@style/AppSummaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings__decoder_fallback_label"
                    />

                <TextView
                    android:id="@+id/tvDecoderFallbackValue"
                    style="@style/AppSummaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/main_margin_2dp"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin_2dp"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/main_margin_4dp"
        android:paddingBottom="@dimen/main_margin_4dp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/player__title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/layExpandableControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:el_expanded="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_50"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/main_margin_16dp"
            android:paddingTop="@dimen/main_margin_4dp"
            android:paddingEnd="@dimen/main_margin_16dp"
            android:paddingBottom="@dimen/main_margin_8dp"
            >

            <dev.chromeos.videocompositionsample.presentation.ui.custom.PlayerControlView
                android:id="@+id/playerControlView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/main_margin_56dp"
                android:paddingTop="@dimen/main_margin_8dp"
                android:paddingEnd="@dimen/main_margin_56dp"
                android:paddingBottom="@dimen/main_margin_8dp"
                />

            <dev.chromeos.videocompositionsample.presentation.ui.custom.CustomSliderView
                android:id="@+id/sliderTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isTimeLineStyle="true"
                app:title="@string/player__time"
                app:valueFrom="0"
                app:valueTo="30"
                />

            <dev.chromeos.videocompositionsample.presentation.ui.custom.CustomSliderView
                android:id="@+id/sliderAlpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/player__alpha"
                app:valueFrom="0"
                app:valueTo="1"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/main_margin_16dp"
                    android:src="@drawable/ic_baseline_settings_24"
                    />

                <dev.chromeos.videocompositionsample.presentation.ui.custom.ResolutionView
                    android:id="@+id/resolutionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/main_margin_8dp"
                    android:layout_toStartOf="@id/ivFileUpload"
                    android:layout_toEndOf="@id/ivSetting"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivFileUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/main_margin_8dp"
                    app:srcCompat="@drawable/ic_baseline_file_upload_24"
                    />

            </RelativeLayout>
        </LinearLayout>
    </net.cachapa.expandablelayout.ExpandableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>